correct path for github actions